# alura-django

./: README.md  pyproject.toml
alurareceita/: settings.py  urls.py
apps/receitas/: models.py  urls.py
apps/receitas/migrations/: 0005_auto_20220915_1040.py
apps/receitas/views/: receita.py
apps/usuarios/: urls.py  views.py
pessoas/: admin.py
pessoas/migrations/: 0001_initial.py  0002_alter_pessoa_id.py
receitas/: admin.py  models.py  urls.py  views.py
receitas/migrations/: 0002_receita_pessoa.py  0003_receita_publicada.py  0004_receita_foto_receita.py
receitas/templates/: buscar.html  index.html  receita.html
templates/: base.html
templates/partials/: _footer.html  _menu.html
templates/receitas/: index.html  receita.html
templates/usuarios/: dashboard.html
usuarios/: urls.py  views.py
