[tool.poetry]
name = "alura-django"
version = "0.1.0"
description = "Projeto para aula de Django do Alura"
authors = ["Sander Toledo"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "2.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
