[tool.poetry]
name = "alura-django"
version = "0.4.0"
description = "Projeto para aula de Django do Alura"
authors = ["Sander Toledo"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.0.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
